--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,3 +10,8 @@ spring:
     url: jdbc:mysql://localhost:3306/shop?serverTimezone=Asia/Shanghai
     username: root
     password: root
+  jpa:
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
